Fixes alignments in charts

--- a/TCD/admin/styles.css
+++ b/TCD/admin/styles.css
@@ -296,7 +296,7 @@ input:checked + .slider:before {
     border-radius: 8px;
     width:100%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-height: 80vh; /* Set max height for the section */
+    max-height: 90vh; /* Set max height for the section */
     overflow-y: auto; /* Enable vertical scroll if content exceeds max height */
     position: relative; /* Ensure it positions correctly in the flow */
 }
@@ -513,7 +513,7 @@ input:checked + .slider:before {
 
 /* Styles for previous orders list */
 #actionControlSection {
-    max-height: 400px; /* Set maximum height */
+    max-height: 85vh; /* Set maximum height */
     overflow-y: auto;  /* Enable vertical scrolling */
     padding: 10px;     /* Optional padding */
     border: 1px solid #ccc; /* Optional border for clarity */
@@ -574,10 +574,10 @@ input:checked + .slider:before {
 
 /* Charts container should adapt to the screen size */
 #chartSection {
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    margin: 0 auto;
+    max-height: 90vh;
+    overflow-y: auto;
+    border: 1px solid;
+    border-radius: 8px;
 }
 
 .chart {
